checkpoint (add adaptive portfolio)

--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,22 @@
   --time-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/* Невидимость */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/*ПРОВЕРКА КАЧЕСТВА РАЗМЕТКИ*/
 body {
   font-family: var(--main-font-name), var(--main-font-family);
   font-style: normal;
@@ -714,7 +730,6 @@ img {
   }
 }
 
-/*ПЕРЕКИНУТЬ ТЕНЬ НА HOVER И FOCUS*/
 .section-hero__button {
   display: block;
   margin-left: auto;
@@ -731,9 +746,16 @@ img {
   border-radius: 4px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  cursor: pointer;
+  -webkit-transition: -webkit-box-shadow var(--delay) var(--time-function);
+  transition: -webkit-box-shadow var(--delay) var(--time-function);
+  transition: box-shadow var(--delay) var(--time-function);
+  transition: box-shadow var(--delay) var(--time-function), -webkit-box-shadow var(--delay) var(--time-function);
+}
+
+.section-hero__button:hover, .section-hero__button:focus {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  cursor: pointer;
 }
 
 @media screen and (min-width: 1200px) {
@@ -957,6 +979,23 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .personal-cards__thumb {
+    height: 374px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .personal-cards__thumb {
+    height: 260px;
+  }
+}
+
+.personal-cards__photo {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
 .personal-cards__info {
   padding: 30px 6px 24px 6px;
 }
@@ -964,7 +1003,6 @@ img {
 @media screen and (min-width: 1200) {
   .personal-cards__info {
     padding: 30px 6px;
-    /**/
   }
 }
 
@@ -1222,21 +1260,23 @@ img {
 .card__thumb {
   position: relative;
   overflow: hidden;
+  max-height: 294px;
 }
 
-/*ВРЕМЕННЫЙ КОСТЫЛЬ*/
-.card__thumb > img {
+.card__photo {
   max-width: 480px;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 @media screen and (min-width: 768px) {
-  .card__thumb > img {
+  .card__photo {
     max-width: 354px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .card__thumb > img {
+  .card__photo {
     max-width: 370px;
   }
 }
@@ -1260,7 +1300,6 @@ img {
   width: 100%;
   height: 100%;
   padding: 24px 24px;
-  /***/
   /* background-color: rgba(33, 150, 243, 0.9); */
   background-color: var(--current-bg-color);
   opacity: 0.9;
@@ -1625,21 +1664,4 @@ img {
 .modal-form__checkbox-input:checked + .modal-form__checkbox-icon .checkbox-icon__source {
   display: block;
 }
-
-/* Невидимость */
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-/*ПРОВЕРКА КАЧЕСТВА РАЗМЕТКИ*/
 /*# sourceMappingURL=main.css.map */
