--- a/sass/components/_section-portfolio.scss
+++ b/sass/components/_section-portfolio.scss
@@ -105,17 +105,18 @@
 .card__thumb {
   position: relative;
   overflow: hidden;
+  max-height: 294px;
 }
 
-/*ВРЕМЕННЫЙ КОСТЫЛЬ*/
-.card__thumb > img {
+.card__photo {
   max-width: 480px;
+  object-fit: cover;
 
-  @media screen and(min-width:768px) {
+  @media screen and (min-width: 768px) {
     max-width: 354px;
   }
 
-  @media screen and(min-width:1200px) {
+  @media screen and (min-width: 1200px) {
     max-width: 370px;
   }
 }
@@ -130,7 +131,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  padding: 24px 24px; /***/
+  padding: 24px 24px;
 
   /* background-color: rgba(33, 150, 243, 0.9); */
   background-color: var(--current-bg-color);
