--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -53,20 +53,24 @@
   }
 }
 
-// .personal-cards__thumb {
-//   width: 100%;
-//   height: 100%;
-// }
+.personal-cards__thumb {
+  @media screen and(min-width:768px) {
+    height: 374px;
+  }
+  @media screen and(min-width:1200px) {
+    height: 260px;
+  }
+}
 
-// .personal-cards__photo {
-//   object-fit: cover;
-// }
+.personal-cards__photo {
+  object-fit: cover;
+}
 
 .personal-cards__info {
   padding: 30px 6px 24px 6px;
 
   @media screen and (min-width: 1200) {
-    padding: 30px 6px; /**/
+    padding: 30px 6px;
   }
 }
 
