--- a/css/main.css
+++ b/css/main.css
@@ -992,6 +992,8 @@ img {
 }
 
 .personal-cards__photo {
+  max-width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
@@ -1264,7 +1266,7 @@ img {
 }
 
 .card__photo {
-  max-width: 480px;
+  max-width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
