--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,11 +14,166 @@
   margin-bottom: 25px;
 }
 
+.page-header__openMenu-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: color var(--delay) var(--time-function);
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.openMenu-button__icon {
+  fill: currentColor;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--main-bg-color);
+  transform: translateX(100%);
+  transition: transform var(--delay) var(--time-function);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu__closeMenu-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  translate: -15px 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  transition: color var(--delay) var(--time-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.closeMenu-button__icon {
+  fill: currentColor;
+}
+
+.navigation__list--mobile-menu {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.navigation__item--mobile-menu {
+  margin-left: 0;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--main-txt-color);
+
+  &:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.navigation__link--mobile-menu {
+  color: currentColor;
+  text-decoration: none;
+  transition: color var(--delay) var(--time-function);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+}
+
+.communication--mobile-menu {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  // background-color: tomato;
+}
+
+.communication__item--mobile-menu {
+  display: flex;
+  justify-content: start;
+
+  &:not(:first-child) {
+    margin-top: 32px;
+  }
+
+  &:last-child {
+    margin-top: 64px;
+  }
+
+  &:nth-child(1) {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.176;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+  }
+
+  &:nth-child(2) {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.167;
+    letter-spacing: 0.02em;
+    color: var(--secondary-txt-color);
+  }
+}
+
+.social-networks__link--mobile-menu {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.222;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
+
+  &:not(:last-child) {
+    color: currentColor;
+  }
+}
+
 .navigation__menu {
   @media screen and (max-width: 767px) {
     display: none;
   }
-
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,18 +181,20 @@
   width: 100%;
 }
 
-.navigation__list {
+.navigation__list--notMobile {
   display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.navigation__item:not(:first-child) {
-  margin-left: 50px;
+.navigation__item--notMobile {
+  &:not(:first-child) {
+    margin-left: 50px;
+  }
 }
 
-.navigation__link {
+.navigation__link--notMobile {
   display: block;
   font-weight: 500;
   font-size: 14px;
@@ -71,9 +228,8 @@
   }
 }
 
-.communication {
+.communication--notMobile {
   display: flex;
-  // flex-wrap: wrap;
   flex-direction: column;
 
   @media screen and (min-width: 768px) {
@@ -81,15 +237,13 @@
   }
 
   @media screen and (min-width: 1200px) {
-    // flex-wrap: nowrap;
     flex-direction: row;
   }
-
   padding: 0;
   list-style: none;
 }
 
-.communication__item {
+.communication__item--notMobile {
   &:not(:first-child) {
     @media screen and (min-width: 768px) {
       margin-top: 10px;
@@ -101,7 +255,7 @@
   }
 }
 
-.communication__link {
+.communication__link--notMobile {
   display: flex;
   align-items: center;
   font-weight: 500;
