--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -157,6 +157,18 @@
   }
 }
 
+.communication__link--mobile-menu {
+  color: currentcolor;
+  text-decoration: none;
+}
+
+.social-networks__item--mobile-menu {
+  &:not(:first-child) {
+    padding-left: 10px;
+    border-left: 1px solid rgba(33, 33, 33, 0.2);
+  }
+}
+
 .social-networks__link--mobile-menu {
   font-weight: 500;
   font-size: 18px;
@@ -164,10 +176,6 @@
   letter-spacing: 0.02em;
   color: var(--accent-color);
   text-decoration: none;
-
-  &:not(:last-child) {
-    color: currentColor;
-  }
 }
 
 .navigation__menu {
@@ -189,18 +197,18 @@
 }
 
 .navigation__item--notMobile {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--main-txt-color);
   &:not(:first-child) {
     margin-left: 50px;
   }
 }
 
 .navigation__link--notMobile {
-  display: block;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  color: var(--main-txt-color);
+  color: currentColor;
   text-decoration: none;
   transition: color var(--delay) var(--time-function);
 
@@ -214,17 +222,19 @@
   position: relative;
   color: var(--accent-color);
 
-  &::after {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    transform: translateY(calc(100% + 28px));
-    display: block;
-    width: 100%;
-    height: 4px;
-    content: '';
-    background-color: var(--accent-color);
-    border-radius: 2px;
+  @media screen and (min-width: 768px) {
+    &::after {
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      transform: translateY(calc(100% + 28px));
+      display: block;
+      width: 100%;
+      height: 4px;
+      content: '';
+      background-color: var(--accent-color);
+      border-radius: 2px;
+    }
   }
 }
 
