--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -36,6 +36,7 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform var(--delay) var(--time-function);
+  overflow-y: scroll;
 }
 
 .backdrop.is-hidden .modal {
