--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -124,13 +124,13 @@
   margin: 0;
   padding: 0;
   list-style: none;
-
-  // background-color: tomato;
 }
 
 .communication__item--mobile-menu {
   display: flex;
   justify-content: start;
+  font-weight: 500;
+  letter-spacing: 0.02em;
 
   &:not(:first-child) {
     margin-top: 32px;
@@ -141,18 +141,14 @@
   }
 
   &:nth-child(1) {
-    font-weight: 500;
     font-size: 34px;
     line-height: 1.176;
-    letter-spacing: 0.02em;
     color: var(--accent-color);
   }
 
   &:nth-child(2) {
-    font-weight: 500;
     font-size: 24px;
     line-height: 1.167;
-    letter-spacing: 0.02em;
     color: var(--secondary-txt-color);
   }
 }
@@ -185,8 +181,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 93px;
+  margin-left: 88px;
   width: 100%;
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 
 .navigation__list--notMobile {
@@ -242,6 +242,8 @@
 .communication--notMobile {
   display: flex;
   flex-direction: column;
+  padding: 0;
+  list-style: none;
 
   @media screen and (min-width: 768px) {
     margin: 0 0 0 auto;
@@ -250,8 +252,6 @@
   @media screen and (min-width: 1200px) {
     flex-direction: row;
   }
-  padding: 0;
-  list-style: none;
 }
 
 .communication__item--notMobile {
