--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './components/common';
 @import './components/logo';
 @import './components/social-networks';
+@import './components/mobile-menu';
 @import './components/page-header';
 @import './components/page-footer';
 @import './components/section-hero';
