--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -11,7 +11,7 @@
   background-color: var(--main-bg-color);
   transform: translateX(100%);
   transition: transform var(--delay) var(--time-function);
-  overflow-x: scroll;
+  // overflow-x: scroll;
 }
 
 .mobile-menu.is-open {
@@ -116,10 +116,11 @@
   text-decoration: none;
 }
 
-// .social-networks--mobile-menu {
-//   display: flex;
-//   flex-wrap: wrap;
-// }
+.social-networks--mobile-menu {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+}
 
 .social-networks__item--mobile-menu {
   &:not(:first-child) {
